--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo": "~51.0.28",
     "expo-asset": "~10.0.10",
     "expo-av": "~14.0.7",
+    "expo-crypto": "~13.0.2",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
@@ -32,10 +33,13 @@
     "react-native": "0.74.5",
     "react-native-confirmation-code-field": "^7.4.0",
     "react-native-gesture-handler": "^2.20.0",
+    "react-native-ios-context-menu": "^2.5.2",
+    "react-native-ios-utilities": "^4.5.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "zeego": "^2.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
