--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
     "react-native-gesture-handler": "^2.20.0",
     "react-native-ios-context-menu": "^2.5.2",
     "react-native-ios-utilities": "^4.5.1",
+    "react-native-mmkv": "^2.12.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
-    "zeego": "^2.0.4"
+    "zeego": "^2.0.4",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
