--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "@clerk/clerk-expo": "^2.2.36",
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^6.0.2",
+    "@tanstack/react-query": "^5.60.6",
     "expo": "~51.0.28",
     "expo-asset": "~10.0.10",
     "expo-av": "~14.0.7",
     "expo-blur": "~12.9.2",
     "expo-crypto": "~13.0.2",
+    "expo-dynamic-app-icon": "^1.2.0",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
+    "expo-local-authentication": "~14.0.1",
     "expo-router": "~3.5.23",
     "expo-secure-store": "~13.0.2",
     "expo-splash-screen": "~0.27.5",
