Add SectionList with Sticky Header to improve data organization and enhance user experience

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_YXdhaXRlZC1tYWtvLTU1LmNsZXJrLmFjY291bnRzLmRldiQ
-CRYPTO_API_KEY=***
+CRYPTO_API_KEY=8bb59a1e-8a87-4161-8b55-c4f7ecf7198d
